feat: Adds banner unit ad string for future use of an ad in MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Build It Bigger</string>
+    <string name="banner_ad_unit_id">ca-app-pub-3404940303849930/7523885204</string>
 </resources>
