style: Adds some formatting and commenting on the strings.xml file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Build It Bigger</string>
+
+    <!-- IDs for Google Ad Mob -->
     <string name="ad_mob_app_id">ca-app-pub-3404940303849930~4570418807</string>
     <string name="banner_ad_unit_id">ca-app-pub-3404940303849930/7523885204</string>
 </resources>
